--- a/django_project/homepage/templates/index.html
+++ b/django_project/homepage/templates/index.html
@@ -9,113 +9,123 @@
   <meta name="author" content="ScrumBois">
 
   <style type="text/css">
-  	* {
-    box-sizing: border-box;
+  /* Font Styles Here */
+  h1 {
+    color: #4286f4;
+    text-align: center;
+  }
+
+  h2 {
+    color: #f4414d;
+    text-align: center;
+  }
+
+  h3 {
+    color: #f4a341;
+    text-align: center;
+  }
+
+  /*Page structure here*/
+  .flex-container {
+      display: -webkit-flex;
+      display: flex;  
+      -webkit-flex-flow: row wrap;
+      flex-flow: row wrap;
+      text-align: center;
+  }
+
+  .flex-container > * {
+      padding: 15px;
+      -webkit-flex: 1 100%;
+      flex: 1 100%;
+  }
+
+  .body {
+      text-align: center;
+  }
+
+  header {
+    background: black;
+    padding: 30px;
+    text-align: center;
+    color:white;
+  }
+
+  footer {
+    background: #aaa;
+    color:white;
+    text-align: center;
+  }
+
+  .nav {
+    margin: auto;
+    width: 50%;
+    background-color: #eee;
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+  }
+
+  .button {
+    background-color: #4286f4; /* Matching title blue */
+    border-radius: 4px;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* For use with Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4286f4;
 }
 
-/* Font Styles Here */
-h1 {
-  color: #4286f4;
-  text-align: center;
+.button1:hover {
+    background-color: #4286f4;
+    color: white;
 }
 
-h2 {
-  color: #f4414d;
-  text-align: center;
-}
+  @media all and (min-width: 768px) {
+      .nav {text-align:left; -webkit-flex: 1 auto; flex:1 auto; -webkit-order:1; order:1;}
+      .article {-webkit-flex:5 0px; flex:5 0px; -webkit-order:2; order:2;}
+      footer {-webkit-order:3; order:3;}
+  }
 
-h3 {
-  color: #f4a341;
-  text-align: center;
-}
-
-/* Style the header */
-.header {
-  grid-area: header;
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-}
-
-/* The grid container */
-.grid-container {
-  display: grid;
-  grid-template-areas: 
-  'header header header header header header' 
-  'left middle middle middle middle right' 
-  'footer footer footer footer footer footer';
-  /* grid-column-gap: 10px; - if you want gap between the columns */
-} 
-
-.left,
-.middle,
-.right {
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-/* Style the left column */
-.left {
-  grid-area: left;
-}
-
-/* Style the middle column */
-.middle {
-  grid-area: middle;
-}
-
-/* Style the right column */
-.right {
-  grid-area: right;
-}
-
-/* Style the footer */
-.footer {
-  grid-area: footer;
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-/*@media (max-width: 600px) {
-  .grid-container  {
-    grid-template-areas: 
-    'header header header header header header' 
-    'left left left left left left' 
-    'middle middle middle middle middle middle' 
-    'right right right right right right' 
-    'footer footer footer footer footer footer';
-}*/
-  </style>
-
+</style>
 
 </head>
 
-<div class="header">
-	<h1>Welcome to ScrumBois' Music School</h1>
-</div>
+<body>
 
-<div class="left" style="background-color:'yellow';">
-	<p>Left Column</p>
-</div>
+<div class="flex-container">
+  <header>  
+    <h1>Welcome to ScrumBois' Music School</h1>
+  </header>
 
-<div class="middle" style="background-color: 'blue';">
-	<h2>Middle Column</h2>
-	<img src="{% static 'images/instruments.jpg' %" alt="Instruments">
-</div>
+<div class="nav">
+  <button class="button button1">ADMIN</button>
+  <button class="button button1">TEACHER</button>
+  <button class="button button1">STUDENT</button>
+</nav>
 
-<div class="right" style="background-color:'yellow';">
-	<p>Right Column</p>
-</div>
+<body class="body">
+  <h2> Welcome</h2>
+  <p><strong>Blurb about music school....</strong></p>
+  <ul>
+    <li>Want to apply to teach at Scrumbois Music School? Click here!</li>
+    <li>Want to apply to learn an instrument at Scrumbois Music School? Click here!</li>
+  </ul>
+</body>
 
-<div class="footer">
-	<h3>Footer</h3>
+<footer>Page produced by Scrumbois &copy; using Django</footer>
+
 </div>
+</body>
 
 </html>
