--- a/mma_3.0/mysite/schedule/templates/general_template.html
+++ b/mma_3.0/mysite/schedule/templates/general_template.html
@@ -30,18 +30,26 @@
 	{% load static %}
 	<img src="{% static 'images/instruments.jpg' %}" height="190" width="200">
 
-	<table>
+	<table align="centre">
 		<tr>
+			<td>
 			<button class="button button1">Button 1</button>
+			</td>
 		</tr>
 		<tr>
+			<td>
 			<button class="button button1">Button 2</button>
+			</td>
 		</tr>
 		<tr>
+			<td>
 			<button class="button button1">Button 3</button>
+			</td>
 		</tr>
 		<tr>
+			<td>
 			<button class="button button1">Button 4</button>
+			</td>
 		</tr>
 	</table>
 	{% endblock %}
