Created schedule.html, updated index.html, modified urls.py and views.py to enable page and linking

--- a/mma_3.0/mysite/schedule/templates/schedule/index.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/index.html
@@ -4,7 +4,7 @@
 <table align="centre">
 		<tr>
 			<td>
-			<button class="button button1">Lessons</button>
+			<button class="button button1" onclick="location.href='{% url 'schedule' %}'">Lessons Schedule</button>
 			</td>
 		</tr>
 		<tr>
