--- a/mma_3.0/mysite/schedule/templates/general_template.html
+++ b/mma_3.0/mysite/schedule/templates/general_template.html
@@ -22,6 +22,7 @@
 <div id="header">
 	{% block body_title %}
 	<h1>Header</h1>
+	<h3 align="right"><a href="{% url 'admin:index' %}">Admin Portal</a></h3>
 	{% endblock %}
 </div>
 
