Created 3x additional pages according to UI design docuemnt, links live and python scripts updated accordingly

--- a/mma_3.0/mysite/schedule/templates/general_template.html
+++ b/mma_3.0/mysite/schedule/templates/general_template.html
@@ -52,6 +52,11 @@
 			<button class="button button1">Button 4</button>
 			</td>
 		</tr>
+		<tr>
+			<td>
+			<button class="button button1">Button 4</button>
+			</td>
+		</tr>
 	</table>
 	{% endblock %}
 
