--- a/mma_3.0/mysite/schedule/templates/schedule/index.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/index.html
@@ -9,7 +9,7 @@
 		</tr>
 		<tr>
 			<td>
-			<button class="button button1">Instruments</button>
+			<button class="button button1" onclick="location.href='{% url 'instruments' %}'">Instruments</button>
 			</td>
 		</tr>
 		<tr>
