--- a/mma_3.0/mysite/schedule/templates/schedule/schedule.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/schedule.html
@@ -13,7 +13,7 @@
 		</tr>
 		<tr>
 			<td>
-			<button class="button button1">Instruments</button>
+			<button class="button button1" onclick="location.href='{% url 'instruments' %}'">Instruments</button>
 			</td>
 		</tr>
 		<tr>
@@ -24,6 +24,11 @@
 		<tr>
 			<td>
 			<button class="button button1">Reports</button>
+			</td>
+		</tr>
+		<tr>
+			<td>
+			<button class="button button1" onclick="location.href='{% url 'profile' %}'">Profile</button>
 			</td>
 		</tr>
 	</table>
