Added login and register pages, added links in the navbar.

--- a/mma_3.0/mysite/schedule/static/css/style.css
+++ b/mma_3.0/mysite/schedule/static/css/style.css
@@ -28,9 +28,30 @@ h3 {
 }
 
 .flex-container > * {
-    padding: 15px;
+    /* padding: 15px; */
     -webkit-flex: 1 100%;
     flex: 1 100%;
+}
+
+.flex {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.flex-full-width {
+  width: 100%;
+}
+
+.flex-start {
+  display: -webkit-flex;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.flex-end {
+  display: -webkit-flex;
+  display: flex;
+  justify-content: flex-end;
 }
 
 header {
@@ -50,11 +71,11 @@ footer {
 }
 
 .nav {
-  width: 50%;
-  background-color: #eee;
-  text-align: center;
-  padding: 20px;
-  font-size: 30px;
+  margin: 10px;
+}
+
+.body {
+  margin: 15px;
 }
 
 .button {
@@ -71,6 +92,7 @@ footer {
   cursor: pointer;
 
   text-decoration: none;
+  height: 20px;
 }
 
 .button1 {
@@ -88,4 +110,62 @@ footer {
     .nav {text-align:left; -webkit-flex: 1 auto; flex:1 auto;}
     .article {-webkit-flex:5 0px; flex:5 0px; -webkit-order:2; order:2;}
     footer {-webkit-order:3; order:3;}
+}
+
+.form {
+  margin-left:auto;
+  margin-right:auto;
+  max-width: 500px;
+  background: #F7F7F7;
+  padding: 25px 15px 25px 10px;
+  font: 12px Georgia, "Times New Roman", Times, serif;
+  color: #888;
+  text-shadow: 1px 1px 1px #FFF;
+  border:1px solid #E4E4E4;
+}
+
+.form label {
+    display: block;
+    margin: 0px;
+}
+
+.form label>span {
+    float: left;
+    width: 20%;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: 10px;
+    color: #888;
+}
+
+.form button {
+  background: #E27575;
+  border: none;
+  padding: 10px 25px 10px 25px;
+  color: #FFF;
+  box-shadow: 1px 1px 5px #B6B6B6;
+  border-radius: 3px;
+  text-shadow: 1px 1px 1px #9E3F3F;
+  cursor: pointer;
+}
+
+.form button:hover {
+  background: #CF7A7A
+}
+
+.form input[type="text"], .form input[type="password"], .form input[type="email"], .form textarea, .form select {
+  border: 1px solid #DADADA;
+  color: #888;
+  height: 30px;
+  margin-bottom: 16px;
+  margin-right: 6px;
+  margin-top: 2px;
+  outline: 0 none;
+  padding: 3px 3px 3px 5px;
+  width: 70%;
+  font-size: 12px;
+  line-height:15px;
+  box-shadow: inset 0px 1px 4px #ECECEC;
+  -moz-box-shadow: inset 0px 1px 4px #ECECEC;
+  -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
 }
