Readded admin button in navbar.

--- a/mma_3.0/mysite/schedule/templates/general_template.html
+++ b/mma_3.0/mysite/schedule/templates/general_template.html
@@ -38,7 +38,7 @@
 						<a class="button button1" href="{% url 'index' %}">HOME</a>
 						<a class="button button1" href="#">STUDENT</a>
 						<a class="button button1" href="#">TEACHER</a>
-						<a class="button button1" href="#">ADMIN</a>
+						<a class="button button1" href="{% url 'admin:index' %}">ADMIN</a>
 					{% endblock %}
 				</div>
 				<div class="flex-full-width flex-end">
