--- a/mma_3.0/mysite/schedule/templates/schedule/profile.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/profile.html
@@ -7,7 +7,7 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<title>My Schedule</title>
+	<title>My Profile</title>
 <!-- ################################# -->
 
 {% else %}
@@ -27,7 +27,7 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<p>My Schedule</p>
+	<p>My Profile</p>
 <!-- ################################# -->
 
 {% else %}
@@ -69,7 +69,7 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<p>Schedule Goes Here</p>
+	<p>Profile Goes Here</p>
 <!-- ################################# -->
 
 {% else %}
@@ -84,10 +84,3 @@
 {% endblock %}
 
 <!-- ################################# -->
-
-
-
-
-
-
-
