Adding Entity Relationship Diagram for Music School Database

--- a/mma_3.0/mysite/schedule/templates/schedule/index.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/index.html
@@ -28,14 +28,14 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<p>My Schedule</p>
+	<h1>My Schedule</h1>
 
 <!-- ################################# -->
 
 {% else %}
 
 <!-- ################################# -->
-	<p>Mika's Music Academy</p>
+	<h1>Mika's Music Academy</h1>
 <!-- ################################# -->
         
 {% endif %}
