--- a/mma_3.0/mysite/schedule/templates/schedule/profile.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/profile.html
@@ -27,13 +27,13 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<p>My Profile</p>
+	<h1>My Profile</h1>
 <!-- ################################# -->
 
 {% else %}
 
 <!-- ################################# -->
-	<p>Mika's Music Academy</p>
+	<h1>Mika's Music Academy</h1>
 <!-- ################################# -->
         
 {% endif %}
