--- a/mma_3.0/mysite/schedule/templates/schedule/index.html
+++ b/mma_3.0/mysite/schedule/templates/schedule/index.html
@@ -49,8 +49,9 @@
 {% if user.is_authenticated %}
 
 <!-- ################################# -->
-	<a class="button button1" href="{% url 'index' %}">Home</a>
+	<a class="button button1" href="{% url 'index' %}"><strong>Home</strong></a>
 	<a class="button button1" href="{% url 'profile' %}">My Profile</a>
+	<a class="button button1" href="{% url 'report' %}">My Report</a>
 	<a class="button button1" href="{% url 'logout' %}">Logout</a>
 <!-- ################################# -->
 
