--- a/mma_3.0/mysite/accounts/templates/registration/signup.html
+++ b/mma_3.0/mysite/accounts/templates/registration/signup.html
@@ -6,14 +6,43 @@
 {% block content %}
 
 <form method="post" class="form">
+	<h1 class="form-header">Sign up</h1>
+
 	{% csrf_token %}
 
-	{% for field in form %}
-	    <div class="fields">
-			{{ field.errors }}
-			{{ field.label_tag }} {{ field }}
-	    </div>
-	{% endfor %}
+	{{ form.username.errors }}
+	{{ form.email.errors }}
+	{{ form.mobile_number.errors }}
+	{{ form.password1.errors }}
+	{{ form.password2.errors }}
+
+	{{ form.username.label_tag }}
+	{{ form.username }}
+
+	{{ form.email.label_tag }}
+	{{ form.email }}
+
+	{{ form.mobile_number.label_tag }}
+	{{ form.mobile_number }}
+
+	{{ form.password1.label_tag }}
+	{{ form.password1 }}
+
+	{{ form.password2.label_tag }}
+	{{ form.password2 }}
+
+	<fieldset>
+		<legend>Address</legend>
+
+		{{ form.street_number.errors }}
+		{{ form.street_name.errors }}
+
+		{{ form.street_number.label_tag }}
+		{{ form.street_number }}
+
+		{{ form.street_name.label_tag }}
+		{{ form.street_name }}
+	</fieldset>
 
 	<button type="submit">Register</button>
 </form>
