--- a/mma5/schedule/templates/general_template.html
+++ b/mma5/schedule/templates/general_template.html
@@ -24,7 +24,7 @@
 	<div class="flex-container">
 		<header class="header">
 			{% block body_header %}
-				<h1>Mika's Music Academy</h1>
+				
 				
 			{% endblock %}
 		</header>
@@ -45,7 +45,7 @@
 			{% endblock %}
 		</div>
 
-  		<footer>Page produced by Scrumbois &copy; using Django</footer>
+  		<footer></footer>
 
   	</div>
 
