--- a/mma5/accounts/templates/registration/login.html
+++ b/mma5/accounts/templates/registration/login.html
@@ -6,9 +6,14 @@
 {% block content %}
 
 <form method="post" class="form">
+
+<h1 class="form-header">Login</h1>
 	{% csrf_token %}
 	{{ form.as_p }}
-	<button type="submit">Login</button>
+	<button class ="button button1" type="submit">Login</button>
+	<a href="{% url 'index' %}">
+	<button class ="button button2"  type="button">Cancel</button>
+	</a>
 </form>
 
 {% endblock %}
